# papudding-backend-template

./: .gitignore  Cargo.toml  README.md  config.toml
src/: main.rs
src/config/: auth_middleware.rs  logger.rs  mod.rs
src/dto/: auth_dto.rs
src/handler/: auth_handler.rs  auth_inner_handler.rs  default_handler.rs  mod.rs  test_handler.rs
src/model/: config.rs  constance.rs  mod.rs  response.rs  state.rs  user.rs
src/router/: auth_inner_router.rs  auth_router.rs  mod.rs  test_router.rs
src/service/: auth_service.rs
src/util/: base64_util.rs  config_util.rs  db_util.rs  header_util.rs  mod.rs  token_util.rs
