[package]
name = "papudding-backend-template"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "*"

rbs = {version = "4.5"}
rbatis = {version = "4.5"}
rbdc-mysql = {version = "4.5"}

serde = { version = "1", features = ["derive"]}
serde_json = "1"
futures = "0.3"   
futures-util = '0.3'

tokio = { version = "1", features = ["full"]}

log = "0.4"
fast_log = "1.6"
env_logger = "0.11"

toml = "0.9"
lazy_static = "1.5"
anyhow = "1.0"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
base64 = "0.22"
bcrypt = "0.17"
chrono = "0.4"
regex = "1"
thiserror = "2.0"
dashmap = {version = "6.1", features = ["serde"]}